objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Wealth Leads Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Net Worth</fullName>
                </value>
                <value>
                    <fullName>Ultra High Net Worth</fullName>
                </value>
                <value>
                    <fullName>Family Office</fullName>
                </value>
                <value>
                    <fullName>DNQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Craig_Lewis_Bond__c</fullName>
        <label>Craig Lewis Bond</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maria_Ramos__c</fullName>
        <label>Maria Ramos</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R10m_plus</fullName>
                    <label>R10m+</label>
                </value>
                <value>
                    <fullName>R30m_plus</fullName>
                    <label>R30m+</label>
                </value>
                <value>
                    <fullName>R300m_plus</fullName>
                    <label>R300m+</label>
                </value>
                <value>
                    <fullName>DNQ</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NIA__c</fullName>
        <label>NIA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NAV__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;R10m</fullName>
                </value>
                <value>
                    <fullName>R7.5m_plus</fullName>
                    <label>R7.5m+</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>Indicate why Lead was not converted</inlineHelpText>
        <label>Outcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <label>Primary Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                    <label>Individual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Reason__c</fullName>
        <inlineHelpText>Explain why the lead was referred</inlineHelpText>
        <label>Referred Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to_BU__c</fullName>
        <label>Referred to Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIFA</fullName>
                </value>
                <value>
                    <fullName>ABSA Private Bank</fullName>
                </value>
                <value>
                    <fullName>RBB</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to__c</fullName>
        <description>Name of person in other business unit that the lead was referred to</description>
        <inlineHelpText>Name of person in other business unit that the lead was referred to</inlineHelpText>
        <label>Referred to</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bloemfontein</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Durban</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Pretoria</fullName>
                </value>
                <value>
                    <fullName>Sandton (Wealth)</fullName>
                </value>
                <value>
                    <fullName>Sandton (Portfolio Management)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Future date on which Lead should be revisited</description>
        <inlineHelpText>Future date on which Lead should be revisited if not converted or referred</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stephen_Van_Coller__c</fullName>
        <label>Stephen Van Coller</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wealth_Product_Interest__c</fullName>
        <label>Wealth Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Investment - International</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>DNQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Wealth_Leads</fullName>
        <active>true</active>
        <businessProcess>Wealth Leads Management</businessProcess>
        <label>Wealth Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>DNQ_Lead_requires_Referred_to</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Id = &quot;0121p000000kRAJ&quot; &amp;&amp;
ISPICKVAL ( Client_Type__c ,&quot;DNQ&quot;) &amp;&amp;
ISPICKVAL ( Status,&quot;Unqualified&quot;) &amp;&amp;
 ISBLANK (Referred_to__c)</errorConditionFormula>
        <errorDisplayField>Referred_to__c</errorDisplayField>
        <errorMessage>Referred to and Referred to Business Unit  are required for status DNQ</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referred_to_requires_Referred_to_BU</fullName>
        <active>true</active>
        <description>Wealth Leads</description>
        <errorConditionFormula>RecordType.Id = &quot;0121p000000kRAJ&quot; &amp;&amp;
NOT ISBLANK (Referred_to__c )&amp;&amp;
((NOT ((ISPICKVAL (Referred_to_BU__c, &quot;ABSA Private Bank&quot;)||
 ISPICKVAL (Referred_to_BU__c, &quot;AIFA&quot;)||
 ISPICKVAL (Referred_to_BU__c, &quot;CIB&quot;)||
ISPICKVAL (Referred_to_BU__c, &quot;RBB&quot;)||
 ISPICKVAL (Referred_to_BU__c, &quot;Other&quot;)))))</errorConditionFormula>
        <errorDisplayField>Referred_to_BU__c</errorDisplayField>
        <errorMessage>Please complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Qualified_requires_Needs</fullName>
        <active>true</active>
        <description>If Lead status is updated to Qualified, the Standing and Needs fields need to be populated</description>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Qualified&quot;)&amp;&amp; 
 
ISBLANK (TEXT(NAV__c) ))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please complete Standing and Needs section below in order to Qualify lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Lead_requires_Review_Date</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Id = &quot;0121p000000kRAJ&quot;&amp;&amp;
(ISPICKVAL ( Status,&quot;Contacted&quot;) ||
ISPICKVAL ( Status,&quot;Unqualified&quot;))&amp;&amp;
ISBLANK (Review_Date__c)</errorConditionFormula>
        <errorDisplayField>Review_Date__c</errorDisplayField>
        <errorMessage>Please insert a date for future review</errorMessage>
    </validationRules>
</CustomObject>